# pyallcode

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: .gitignore  Makefile  __init__.py  api.rst  apidocs.rst  conf.py  index.md  index.rst  installation.md  make.bat
docs/API/: axes.md  buggy.md  buttons.md  devices.md  enums.md  ir_sensors.md  lcd.md  leds.md  light_sensor.md  line_sensors.md  mic.md  sd_card.md  servos.md  speaker.md
examples/: README.md  accelerometer_example.py  buttons_example.py  ir_example.py  lcd_example.py  leds_example.py  light_example.py  line_example.py  mic_example.py  port_discovery_example.py  sdcard_example.py  servos_example.py  speaker_example.py
pyallcode/: __init__.py  apitest.py  buggy.py  enums.py  robot.py  serial_comms.py
pyallcode/comm/: connection.py  ports.py  transport.py
pyallcode/devices/: accelerometer.py  axis.py  base.py  buttons.py  ir.py  ir_sensors.py  lcd.py  leds.py  light.py  light_sensor.py  line.py  line_sensors.py  mic.py  push_buttons.py  sd_card.py  sdcard.py  servos.py  speaker.py
pyallcode/examples/: device_examples.py  linear_programming_2.py
pyallcode/handler/: null_device.py  protcol_simfad.py
tests/: apitest.py  conftest.py  test_accelerometer.py  test_buggy.py  test_buttons.py  test_connection.py  test_e2e.py  test_init.py  test_ir.py  test_lcd.py  test_leds.py  test_light.py  test_line.py  test_mic.py  test_ports.py  test_robot.py  test_sdcard.py  test_serial_comms.py  test_servos.py  test_speaker.py  test_transport.py
